# datenkompw25_26

./: .gitignore  CMakeLists.txt  README.md  build_release.bat  startEXE.bat
bpp/: bitrates.txt  bitratesJPEGLS.txt  bitratesLOCOA.txt  bitratesLOCONeu.txt  bitratesLOCOsimple.txt  bitratesPNG.txt  bpp_infoPNG.txt  groupbpp.py  kodim01_decoded-kontextlos.pgm  kodim01_decoded-kontextupdate.pgm  picture.py  resultsJPEGLS.txt
bpp/ergebnisseGruppen/: kodim01_g10_decoded.pgm  residuals_3color15.pgm  residuals_raw10.pgm
bppalt/: bitratesAdaptLOCO.txt  bitratesG3.txt
output copy/: bpp_results.csv
output copy/losslessImageVersion1/: hist.py  histoA_ctx.txt  histoAll_err.txt  histoB_ctx.txt  histoB_err.txt  histoD_err.txt
output copy/losslessImageVersion1/minibilder/: ctx3x2_1.pgm  ctx3x2_10.pgm  ctx3x2_100.pgm  ctx3x2_101.pgm  ctx3x2_102.pgm  ctx3x2_103.pgm  ctx3x2_104.pgm  ctx3x2_105.pgm  ctx3x2_106.pgm  ctx3x2_107.pgm  ctx3x2_108.pgm  ctx3x2_109.pgm  ctx3x2_11.pgm  ctx3x2_110.pgm  ctx3x2_111.pgm  ctx3x2_112.pgm  ctx3x2_113.pgm  ctx3x2_114.pgm  ctx3x2_115.pgm  ctx3x2_116.pgm  ctx3x2_117.pgm  ctx3x2_118.pgm  ctx3x2_119.pgm  ctx3x2_12.pgm  ctx3x2_120.pgm  ctx3x2_121.pgm  ctx3x2_122.pgm  ctx3x2_123.pgm  ctx3x2_124.pgm  ctx3x2_13.pgm  ctx3x2_14.pgm  ctx3x2_15.pgm  ctx3x2_16.pgm  ctx3x2_17.pgm  ctx3x2_19.pgm  ctx3x2_2.pgm  ctx3x2_20.pgm  ctx3x2_21.pgm  ctx3x2_22.pgm  ctx3x2_23.pgm  (+78 more)
output copy/losslessImageVersionLOCO/: histoA_err.txt  histoAll_err.txt  histoC_err.txt
src/app/: losslessImageVersion0.cpp  losslessImageVersion1 copyLoco2.cpp  losslessImageVersion1-2DIMmitHeatmap.cpp  losslessImageVersion1-2dim.cpp  losslessImageVersion1.cpp  losslessImageVersion1LOCO.cpp  losslessImageVersion1funktional.cpp  losslessImageVersionLOCO.cpp
src/lib/: arithCoding.cpp  arithCoding.h  bitstream.cpp  bitstream.h  pgm.cpp  pgm.h
test/: genPlot.sh  run.sh
